--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -3,16 +3,32 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    height: 100%;
+    width: 100%;
+}
 .flex-container{
-    background: yellow;
+    flex-flow: row wrap;
     display: flex;
-    height: 500px;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 .flex-item{
     background: red;
+    flex-grow: 1;
+    flex-basis: 400px;
+    height: 400px;
+    margin: 10px;
+    color: #fff;
+    align-content: flex-start;
+}
+.button{
+    color: aliceblue;
+}
+.button:hover{
+    background-color: blueviolet;
 }
