--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -7,6 +7,7 @@ body{
     height: 100%;
     width: 100%;
 }
+
 .flex-container{
     flex-flow: row wrap;
     display: flex;
@@ -18,6 +19,7 @@ body{
 }
 
 .flex-item{
+    z-index: 0;
     background: red;
     flex-grow: 1;
     flex-basis: 400px;
