--- a/dashboard2/style.css
+++ b/dashboard2/style.css
@@ -51,6 +51,14 @@ h2{
     line-height: 18px;
 }
 
+.card-perfil{
+    border: 1px solid rgba(63, 61, 86, 0.1);
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(63, 61, 86, 0.12);
+    background-color: #EBE7ED;
+    opacity: 0.8;
+}
+
 .graphics{
     text-align: center;
     border: 1px solid rgba(63, 61, 86, 0.1);
