--- a/dashboard2/style.css
+++ b/dashboard2/style.css
@@ -5,6 +5,11 @@ h2{
     font-size: 24px;
 }
 
+h4{
+    font-size: 12px;
+    line-height: 11px;
+}
+
 .container{
     padding: 50px 0 50px 100px !important;
     align-content: center;
@@ -52,11 +57,10 @@ h2{
 }
 
 .card-perfil{
-    border: 1px solid rgba(63, 61, 86, 0.1);
-    border-radius: 4px;
-    box-shadow: 0px 2px 4px rgba(63, 61, 86, 0.12);
-    background-color: #EBE7ED;
-    opacity: 0.8;
+    width: 100%;
+    height: 450px;
+    align-items: center;
+    padding: 10px;
 }
 
 .graphics{
@@ -80,7 +84,6 @@ h2{
     color: rgba(0, 0, 0, 0.603);
 }
 
-
 .header-font{
     margin: 10px;
     font-style: normal;
@@ -99,4 +102,62 @@ h2{
     line-height: 12px;
     font-weight: 400;
     font-style: normal;
+}
+
+.col-md-5{
+    text-align: center;
+}
+
+.list-group{
+    border: 1px solid rgba(63, 61, 86, 0.1);
+    border-radius: 4px;
+    box-shadow: 2px 2px 4px rgba(63, 61, 86, 0.12);
+    background-color: #EBE7ED;
+    opacity: 0.8;
+}
+
+.list-group-item{
+    width: 300px;
+    align-items: center;
+    text-align: center;
+}
+
+.direction-left{
+    text-align: initial;
+}
+
+.direction-left h5{
+   color: rgba(61, 61, 61, 1);
+   font-size: 11px;
+   font-weight: 11px;
+}
+
+.name-perfil{
+    font-size: 16px;
+    line-height: 14px;
+    margin-right: 100px;
+    color: rgba(24, 24, 24, 1);
+}
+
+.min{
+    font-size: 12px;
+    line-height: 11px;
+    text-align: end;
+    color: rgba(61, 61, 61, 1);
+}
+
+.see-more{
+    text-align: center;
+}
+
+.see-more a{
+    font-size: 14px;
+    color: rgba(24, 24, 24, 1);
+    line-height: 14px;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.see-more a:hover{
+    color: rgba(0, 0, 0, 0.603);
 }
