--- a/dashboard2/style.css
+++ b/dashboard2/style.css
@@ -13,6 +13,8 @@ h4{
 .container{
     padding: 50px 0 50px 100px !important;
     align-content: center;
+    min-height: 700px;
+    max-height: 1980px;
 }
 
 .firsts{
