--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -62,6 +62,7 @@ main {
 
 h2 span {
   color: purple;
+  display: inline-block;
 }
 
 p {
@@ -112,7 +113,7 @@ form [type=submit]:hover {
   transition: 0.8s;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 780px) {
   header {
     flex-direction: column;
   }
@@ -133,11 +134,5 @@ form [type=submit]:hover {
   }
   ul {
     text-align: center;
-  }
-}
-@media screen and (max-width: 780px) {
-  img {
-    margin-top: 30px;
-    display: flex;
   }
 }/*# sourceMappingURL=style.css.map */
